--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>infoCBD - Informação Completa sobre CBD</title>
+    <title>NUUMA - Informação Completa sobre CBD</title>
     <meta name="description" content="Descubra os benefícios do CBD com informações confiáveis e baseadas em ciência. Sua jornada para o bem-estar começa aqui." />
     <meta name="author" content="infoCBD" />
 
