médico novo com tela nova

--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NUUMA - Informação Completa sobre CBD</title>
-    <meta name="description" content="Descubra os benefícios do CBD com informações confiáveis e baseadas em ciência. Sua jornada para o bem-estar começa aqui." />
-    <meta name="author" content="infoCBD" />
+    <title>NUUMA - Telesaúde Especializada em Cannabis Medicinal</title>
+    <meta name="description" content="Telesaúde especializada em tratamento com cannabis medicinal, do médicamento ao médico. Mais que alívio. Qualidade de vida com canabidiol!" />
+    <meta name="author" content="NUUMA" />
+    <meta name="keywords" content="canabidiol, CBD, cannabis medicinal, tratamento, telesaúde, medicina canábica, NUUMA" />
 
-    <meta property="og:title" content="infoCBD - Informação Completa sobre CBD" />
-    <meta property="og:description" content="Descubra os benefícios do CBD com informações confiáveis e baseadas em ciência." />
+    <meta property="og:title" content="NUUMA - Telesaúde Especializada em Cannabis Medicinal" />
+    <meta property="og:description" content="Telesaúde especializada em tratamento com cannabis medicinal, do médicamento ao médico. Mais que alívio. Qualidade de vida com canabidiol!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://nuuma.com.br" />
+    <meta property="og:locale" content="pt_BR" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@infoCBD" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="NUUMA - Telesaúde Especializada em Cannabis Medicinal" />
+    <meta name="twitter:description" content="Telesaúde especializada em tratamento com cannabis medicinal, do médicamento ao médico." />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    
+    <link rel="canonical" href="https://nuuma.com.br" />
     
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
